       enemy leaders.
 * language and i18n:
   * updated translations: Chinese (Traditional), Czech, Danish, French, German,
     Hungarian, Italian, Lithuanian, Polish, Russian, Spanish
   * updated manpages: Hungarian
   * updated manual: Hungarian
   * fonts: DejaVuSans 2.26
 * miscellaneous and bug fixes:
   * Fixed OOS bug when giving control and having move in undo stack.

Version 1.4.4:
 * language and i18n:
   * new translation: Latvian
   * updated translations: Arabic, Catalan, Chinese (Traditional), Czech,
     Danish, Finnish, French, Galician, German, Greek, Hungarian, Italian,
     Japanese, Lithuanian, Polish, Russian, Serbian, Slovak
   * langcode change: moved gl_ES to gl
 * miscellaneous and bug fixes:
   * Fixed timer end warning not to play in opponents turn (bug: #11517)
   * fix bug #11630 (preventing redo and rename during opponent's turn)
   * Added recursion preventarion to [kill] fire_event=yes [/kill]
   * Added check whether sendfile is in glibc (debian patch #490638)

Version 1.4.3:
 * campaigns:
   * The Rise of Wesnoth:
     * fixed the Wesfolk Outcast line's distract ability not working
 * language and i18n:
   * new translations: Arabic, Friulian, Macedonian
   * updated translations: Czech, Danish, Dutch, Estonian, Finnish, French,
     German, Hungarian, Japanese, Polish, Russian, Serbian, Slovak, Spanish
   * fonts: DejaVuSans 2.25
   * manual: updated screenshots to match UI rearrangements
 * WML engine:
   * fix [teleport] capturing villages with the wrong side (bug #11683)
 * campaignd
   * made campaign server use gzip compression for networking
   * made campaign server detect if client can receive gzipped data
   * made campaign server use gzip for storing addons
   * added configuraion option to choose gzip compression level
 * miscellaneous and bug fixes:
   * fixed parser bug that prevented loading binary data strings
   * starting a campaign without any installed now gives an error.