@@ -2784,6 +2784,18 @@ void unit::apply_modifications()
 	}
 }
 
+void unit::ambush(const gamemap::location& loc) const
+{
+	invisibility_cache_.find(loc);
+	std::vector<const unit *>::iterator itor =
+	std::find(units_with_cache.begin(), units_with_cache.end(), this);
+
+	if(itor != units_with_cache.end()) {
+		units_with_cache.erase(itor);
+	}
+
+}
+
 bool unit::invisible(const gamemap::location& loc,
 		const unit_map& units,const std::vector<team>& teams, bool see_all) const
 {
