@@ -269,6 +269,11 @@ public:
 	// Only see_all=true use caching
 	bool invisible(const gamemap::location& loc,
 		const unit_map& units,const std::vector<team>& teams, bool see_all=true) const;
+	/**
+	 * Make sure that invisibility cache is revalidate
+	 * after ambush;
+	 **/
+	void ambush(const gamemap::location& loc) const;
 
 	unit_race::GENDER generate_gender(const unit_type& type, bool gen, game_state* state = 0);
 	std::string image_mods() const;
