@@ -13,6 +13,7 @@ Version 1.4.4+svn:
    * fonts: DejaVuSans 2.26
  * miscellaneous and bug fixes:
    * Fixed OOS bug when giving control and having move in undo stack.
+   * Fixed crash when ai moves units next to level 0 hiden unit (bug #12252)
 
 Version 1.4.4:
  * language and i18n:
